[metadata]
name = alexw-sandbox
author = Trainline - Data Science
author_email = datascienceteam@thetrainline.com
url = https://github.com/trainline-private/alexw-sandbox.git
description = A sandbox project for AlexW to learn pex and Jenkins
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Natural Language :: English

[options]
python_requires = ~=3.7
packages = find:
include_package_data = True

[options.package_data]
alexw_sandbox = schemas/*.edn